<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:background="@color/fundoMain"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_paises_pais"
            android:padding="10dp"
            android:textColorHint="@color/hint_layouts"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/text_brasil_pais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="RS"
            android:textColor="@color/textColorElementos"
            android:textColorHint="@color/hint_layouts"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_paises_casos"
            android:padding="10dp"
            android:textColorHint="@color/hint_layouts"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/text_brasil_casos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Rio Grande Do Sul"
            android:textColor="@color/textColorElementos"
            android:textColorHint="@color/hint_layouts"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_paises_confirmados"
            android:padding="10dp"
            android:textColorHint="@color/hint_layouts"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/text_brasil_confirmados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="95000"
            android:textColor="@color/textColorElementos"
            android:textColorHint="@color/hint_layouts"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_paises_mortes"
            android:padding="10dp"
            android:textColorHint="@color/hint_layouts"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/text_brasil_mortes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="2000"
            android:textColor="@color/textColorElementos"
            android:textColorHint="@color/hint_layouts"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_paises_recuperados"
            android:padding="10dp"
            android:textColorHint="@color/hint_layouts"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/text_brasil_recuperados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="50"
            android:textColor="@color/textColorElementos"
            android:textColorHint="@color/hint_layouts"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_paises_atualizacao"
            android:padding="10dp"
            android:textColorHint="@color/hint_layouts"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/text_brasil_atualizacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="18/12/1997"
            android:textColor="@color/textColorElementos"
            android:textColorHint="@color/hint_layouts"
            android:textSize="20dp" />
    </LinearLayout>


</LinearLayout>